# Fleasion

./: .gitignore  fleasion.spec  pyproject.toml
src/fleasion/: Fleasion2.ui  __init__.py  terminal.py  test.py
src/fleasion/modules/cache/: main.py  tab.ui
src/fleasion/modules/cache/core/: main_finder.py  main_loader_rules.py  main_misc.py  main_mitm.py  main_presets.py  main_preview.py  main_resolver.py  main_table.py  main_widget.py
src/fleasion/modules/cache/shared/: audio_player.py  constants.py  delegates.py  menu_utils.py  mesh_processing.py  models.py  threading_utils.py  ui_loader.py  utils.py
src/fleasion/modules/cache/tools/animpreview/: anim_gl_widget.py  animpreview.py  rbxm_parser.py
src/fleasion/modules/cache/tools/solidmodel_converter/: __init__.py  _utils.py  converter.py  csg_mesh.py  mesh_intermediary.py  obj_to_csg.py  obj_to_mesh.py
src/fleasion/modules/cache/tools/solidmodel_converter/rbxm/: __init__.py  binary_reader.py  binary_writer.py  deserializer.py  serializer.py  xml_writer.py
src/fleasion/modules/cache/ui/: 2ndPresetsThing.py  dialog1_ui.py  dialog2_ui.py  dialog3_ui.py  dialog5_ui.py  dialog6_ui.py  presetsthing.py
src/fleasion/modules/cache/widgets/: add_game_card_widget.py  game_card_widget.py
src/fleasion/modules/credits/: main.py  manifest.json  resources_rc.py  tab.ui
src/fleasion/modules/randostuff/: main.py  manifest.json  tab.ui
src/fleasion/modules/subplace_tab/: game_card_widget.py  main.py  qt_message_filter.py
src/fleasion/proxy/: setup.py
